========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2015-12-02

  - Fixed issue #84: The sorting of entries from multiple files was incorrectly
    placed, due to recent changes merged from the booking branch.

  - Fixed a bug deleting the load cache (was using an invalid filename).


2015-11-29

  - Made the pickle load cache enabled by default. This means you can now remove
    the BEANCOUNT_LOAD_CACHE environment variable. The load cache will be
    written out automatically, but only if it takes more than the time threshold
    (1 sec) to load a Beancount file. If it takes less than this time, no cache
    is written. (This saves the creation of these pesky crumbs for files it
    doesn't matter for.) If you would like to always disable the load cache, set
    the environment variable BEANCOUNT_DISABLE_LOAD_CACHE. I don't recommend
    it--this works well and for large files makes loading much, much faster.


2015-11-28

  - Implemented a script used to fetch prices online and output them in
    Beancount input format. This script is able not only to take an explicit
    list of prices to get, but also able to read a Beancount input file and
    figure out the list of commodities held at a particular point in time and
    fetch only those prices. A "price" metadata field on a Commodity directive
    is used to specify how and where to get prices from. It comes with support
    for Google Finance and Yahoo! Finance price sources and the syntax supports
    custom-written Python modules so you can write your own price fetching
    extensions, that integrate with the price fetching tool.

    The new code is located under "src/python/beancount/prices" and this new
    tool is documented in http://furius.ca/beancount/doc/prices.

    (Note: This is brand new code, probably imperfect, but I tried to keep this